// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateResourceModal modal handleModalCancel as expected 1`] = `
Object {
  "modalOpen": false,
  "processing": false,
  "requestError": null,
  "yaml": "",
  "yamlParsingError": null,
}
`;

exports[`CreateResourceModal modal handleModalSubmit as expected 1`] = `
Object {
  "modalOpen": false,
  "processing": true,
  "requestError": null,
  "yaml": "",
  "yamlParsingError": null,
}
`;

exports[`CreateResourceModal modal renders as expected 1`] = `ShallowWrapper {}`;
